--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spend Elon’s Fake Money</title>
+    <title>Responsive Design</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Spend Elon’s Fake Money!</h1>
-        <div id="money">Money: $<span id="amount">429000000000</span></div>
-        <div id="items"></div>
+        <div class="content">
+            <h1>Responsive Text</h1>
+            <p>This text adjusts based on the screen size.</p>
+            <p>Numbers: <span class="number">1234567890</span></p>
+        </div>
     </div>
-    <script src="scripts.js"></script>
 </body>
 </html>
